--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
   <!-- Google Fonts: Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   
+  <link rel="icon" href="/logo.png" type="image/png" />
+
   
   <!-- Optional favicon -->
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
